<resources>
    <string name="app_name">TruckSimulatorTimer</string>
    <string name="title">Truck Simulator Timer</string>
    <string name="sub_title">by Okrim</string>
    <string name="total_distance">Total distance:</string>
    <string name="total_travel_time">Total travel time:</string>
    <string name="total_travel_time_card">Total travel time (h, min):</string>
    <string name="total_travel_time_hint_hour">Hours</string>
    <string name="total_travel_time_hint_minute">Minutes</string>
    <string name="hours">h</string>
    <string name="minutes">min</string>
    <string name="kilometres">km</string>
    <string name="add_one_min">+1 MIN</string>
    <string name="add_ferry_time">Add ferry ride</string>
    <string name="calculate">Calculate</string>
    <string name="subtract_ferry_time">Another ferry ride</string>
    <string name="ferry_distance">Ferry distance (km):</string>
    <string name="ferry_time">Ferry time (h, min):</string>
    <string name="ferry_hour">Type ferry hours</string>
    <string name="ferry_minute">Type ferry minutes</string>
    <string name="total_distance_hint">Kilometres on land</string>
    <string name="total_ferry_distance_hint">Kilometres by ferry</string>
    <string name="estimated_time">Estimated time:</string>
    <string name="eta">ETA:</string>
    <string name="time_remaining">Estimated time remaining:</string>
    <string name="timer_default">00:00:00</string>
    <string name="timer_start">Start timer</string>
    <string name="timer_stop">Stop timer</string>
    <string name="reset">Reset</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="pause">Pause timer</string>
    <string name="resume">Resume timer</string>
    <string name="distance_load_pickup">Distance until load pickup (h, min):</string>
    <string name="load_pickup_hour">Hours</string>
    <string name="load_pickup_minute">Minutes</string>
    <string name="menu">Menu</string>
    <string name="button_timer">Timer</string>
    <string name="button_settings">Settings</string>
    <string name="button_statistics">Statistics</string>
    <string name="button_database">Database</string>
    <string name="menu_subtitle">Application made by Okrim</string>
    <string name="settings">Settings</string>
    <string name="set_estimation_tactic">Set estimation strategy:</string>
    <string name="set_expected_error">Set expected error due to traffic:</string>
    <string name="optimistic">Optimistic (up to +/- 10%)</string>
    <string name="realistic">Realistic (up to +/- 30%)</string>
    <string name="pessimistic">Pessimistic (up to +/- 50%)</string>
    <string name="help">Help</string>
    <string name="confirm_wipe">Are you sure want to wipe the database? This CANNOT be reverted.</string>
    <string name="explain">Explain what this does</string>
    <string name="set_sampling_strategy">Set sampling strategy:</string>
    <string name="plus_minus_10">plus/minus 10%</string>
    <string name="plus_minus_20">plus/minus 20%</string>
    <string name="plus_minus_30">plus/minus 30%</string>
    <string name="help_sampling">When calculating the estimated arrival time the app looks at previous drives that were of similar distance as the current drive, and adjusts the current estimation by how good the previous estimations were (if they were on time or not). Similar means in a plus/minus something percentage, this is what you can set. Example: if you set plus/minus 10% and your current drive\'s original estimated time is 10 minutes than all previous drives from 9 to 11 minutes will be considered.</string>
    <string name="help_estimation">When calculating the estimated arrival time the app looks at previous drives that were of similar distance as the current drive, and adjusts the current estimation by the error rate of the previous  drives. This setting is to set the error rate\'s maximum size. Example: you choose the Optimistic strategy and the previous drives show a 15% error rate (drives took 15% longer than estimated) but the current calculation only calculates with a 10% error rate.</string>
    <string name="wipe_database">Wipe database:</string>
    <string name="delete_all_data">Delete all data</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete">Are you sure want to delete this delivery? This cannot be reverted.</string>
    <string name="expected_error_5">+5% of estimated time</string>
    <string name="expected_error_10">+10% of estimated time</string>
    <string name="expected_error_20">+20% of estimated time</string>
    <string name="expected_error_30">+30% of estimated time</string>
    <string name="help_expected_error">The delivery time shown in game is an optimistic estimation without factoring in traffic </string>
    <string name="toast_missing_input">Fill in the inputs before starting the timer!</string>
    <string name="toast_missing_input_calculate">Fill in the inputs before calculating!</string>
    <string name="toast_negativ_value">This subtraction would result in a negative timer value!</string>
    <string name="toast_all_inputs_zero">All inputs cannot be zero!</string>
    <string name="toast_delete_successful">Deletion successful.</string>
    <string name="statistics_error_rate">Average error of all previous deliveries:</string>
    <string name="statistics_precision_median">Median of all previous delivery precisions:</string>
    <string name="statistics_delivery_amount">Number of deliveries timed:</string>
    <string name="statistics_used_on_days">You have used the timer on this many days:</string>
    <string name="statistics_average_drive_per_day">Average drive time per day:</string>
    <string name="statistics_total_drive_time">Total drive time:</string>
    <string name="statistics_date_median">You usually play around this time (median):</string>
    <string name="estimation_operand">Set error estimation operand:</string>
    <string name="help_estimation_operand">When the error rate is calculated from the previous delivery data one can either choose to calculate this by average or median. For more precision use median.</string>
    <string name="average">Average</string>
    <string name="median">Median</string>
    <string name="what_is_this">What is this?</string>
    <string name="help_statistics_precision">This number indicates the amount of error in the past drive time estimations. There are 3 categories:\n\nNegative numbers: usually arrived this % slower than estimated\n\nZero: always arrived on time\n\nPositive numbers: usually arrived this % faster than estimated</string>
    <string name="settings_time_compression">Set time compression:</string>
    <string name="settings_time_compression_help">Give how many seconds 1 in-game minute equals to:</string>
    <string name="settings_time_compression_hint">Type the amount of seconds</string>
    <string name="settings_time_compression_ratio">Time Compression Ratio = \t 1:</string>
    <string name="settings_current_time_compression_ratio">Currently used ratio = \t 1:</string>
    <string name="placeholder">\?</string>
    <string name="save">Save</string>
    <string name="number_format_error">Number Format Error: Please correct the entered value!</string>
    <string name="empty_input_error">You first have to fill the input out!</string>
    <string name="reset_successful">Reset successful!</string>
    <string name="save_successful">Save successful!</string>
    <string name="help_time_compression">With this setting you can change the default time compression used in the app, which is 1:20 (1 in-game minute = 3 IRL seconds), the ETS2 standard.\n\nIf you have some custom maps downloaded, they might have a different compression with different time compression. If so, you can change the ratio, to make the timer work on other compression ratios too.</string>
</resources>