<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@string/title"
                app:srcCompat="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewMenuTitle1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/title"
                    android:textAlignment="center"
                    android:textSize="30sp" />

            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/holo_orange_dark" />

        <TextView
            android:id="@+id/textViewSubTitle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/menu_subtitle"
            android:textAlignment="center"
            android:textSize="20sp" />

        <View
            android:id="@+id/divider7"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/holo_orange_dark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonMenuTimer"
                style="@style/Widget.Material3.Button"
                android:layout_width="match_parent"
                android:layout_height="100sp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@android:color/holo_green_dark"
                android:text="@string/button_timer"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:cornerRadius="10dp"
                app:icon="@android:drawable/ic_menu_recent_history"
                app:iconSize="30dp"
                app:iconTint="@color/white"
                tools:ignore="VisualLintButtonSize,DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/buttonMenuSettings"
                style="@style/Widget.Material3.Button"
                android:layout_width="match_parent"
                android:layout_height="100sp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@android:color/holo_orange_dark"
                android:text="@string/button_settings"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:cornerRadius="10dp"
                app:icon="@android:drawable/ic_menu_manage"
                app:iconSize="30dp"
                app:iconTint="@color/white"
                tools:ignore="VisualLintButtonSize,TextContrastCheck" />

            <Button
                android:id="@+id/buttonMenuStatistics"
                style="@style/Widget.Material3.Button"
                android:layout_width="match_parent"
                android:layout_height="100sp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@android:color/holo_blue_dark"
                android:text="@string/button_statistics"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:cornerRadius="10dp"
                app:icon="?android:attr/actionModeFindDrawable"
                app:iconSize="30dp"
                app:iconTint="@color/white"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/buttonMenuDatabase"
                style="@style/Widget.Material3.Button"
                android:layout_width="match_parent"
                android:layout_height="100sp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@android:color/holo_purple"
                android:text="@string/button_database"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:cornerRadius="10dp"
                app:icon="@android:drawable/ic_dialog_dialer"
                app:iconSize="25dp"
                app:iconTint="@color/white"
                tools:ignore="VisualLintButtonSize" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>