<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardTotalFerryDistance"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:cardBackgroundColor="#4CAF50">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/textViewTotaFerrylDistance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="@string/distance_load_pickup"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextPickupHour"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:autofillHints="distance"
                android:ems="10"
                android:hint="@string/load_pickup_hour"
                android:inputType="number"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/editTextPickupMinute"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:autofillHints="distance"
                android:ems="10"
                android:hint="@string/ferry_minute"
                android:inputType="number"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
